--- a/style.css
+++ b/style.css
@@ -115,6 +115,10 @@ h1 {
   justify-content: space-between;
 }
 
+#nav-date {
+  display: none;
+}
+
 .modals {
   display: none;
 }
@@ -147,9 +151,8 @@ footer {
 }
 
 /* WORKS */
-
-.works {
-  flex: 3 1 0px;
+.week-title {
+  margin-bottom: calc(0.5 * var(--padding));
 }
 
 .week-date {
@@ -225,12 +228,27 @@ li:before {
     z-index: 9;
     width: calc(100% - 2 * var(--padding));
   }
+  .main-nav h3 {
+    position: relative;
+  }
+  #nav-date {
+    display: flex;
+  }
   .about {
     height: calc(100vh - 6em);
+    order: 2;
   }
   .modals {
     display: block;
   }
+  /* .week-title {
+    color: white;
+    font-size: 1.2em;
+    position: sticky;
+    top: var(--padding);
+    text-shadow: 0px 0px 10px black;
+    z-index: 9;
+  } */
   .work-content {
     grid-template-columns: 1fr;
   }
