--- a/style.css
+++ b/style.css
@@ -109,6 +109,16 @@ h1 {
   line-height: 1;
 }
 
+a,
+a:visited {
+  color: var(--second-color);
+}
+
+a:hover {
+  color: var(--main-color);
+  background-color: var(--second-color);
+}
+
 .main-nav {
   display: flex;
   width: 100%;
@@ -165,12 +175,16 @@ footer {
   flex-direction: column;
 }
 
+address {
+  font-style: normal;
+}
+
 /* WORKS */
 .week-title {
   margin-bottom: calc(0.5 * var(--padding));
 }
 
-.week-title h1 {
+.svg-week {
   position: absolute;
 }
 
@@ -199,22 +213,39 @@ li:before {
   pointer-events: auto;
 }
 
+.svg-week {
+  fill: none;
+  stroke: #000000;
+  stroke-width: 2;
+  stroke-miterlimit: 10;
+}
+
 .work-content {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-top: calc(var(--padding) / 2);
+  margin-bottom: var(--padding);
   gap: var(--padding);
 }
 
 .work-content figure {
-  width: 100%;
-  height: 250px;
-  background-color: var(--second-color);
+  /* width: 100%;
+  height: 250px; */
+  /* background-color: var(--second-color); */
   border-radius: 4px;
+}
+
+img {
+  display: block;
+  /* max-width: 230px;
+  max-height: 95px; */
+  width: auto;
+  height: auto;
 }
 
 .work-meta {
   font-style: italic;
+  font-size: 0.85em;
 }
 
 .work-text,
@@ -280,15 +311,17 @@ li:before {
     margin-left: auto;
   }
   /* .week-title {
-    color: white;
-    font-size: 1.2em;
     position: sticky;
     top: var(--padding);
-    text-shadow: 0px 0px 10px black;
     z-index: 9;
   } */
   .work-content {
     grid-template-columns: 1fr;
+  }
+  .svg-week {
+    position: relative;
+    top: 1.5em;
+    width: calc(100% - var(--padding));
   }
 }
 
