--- a/style.css
+++ b/style.css
@@ -299,6 +299,11 @@ img {
 }
 
 @media only screen and (min-width: 801px) {
+  #header-title {
+    display: inline-block;
+    transform: scaleX(6);
+    transform-origin: 0 0;
+  }
   #about-container main {
     position: fixed;
     width: calc(50vw - 2 * var(--padding));
@@ -313,6 +318,12 @@ img {
   footer {
     position: fixed;
     bottom: var(--padding);
+  }
+  .week {
+    margin-bottom: calc(1.5 * var(--padding));
+  }
+  #week3 {
+    margin-bottom: 0;
   }
   .work-list {
     pointer-events: none;
