--- a/style.css
+++ b/style.css
@@ -302,6 +302,9 @@ img {
 }
 
 @media only screen and (min-width: 801px) {
+  .main-container {
+    margin-top: var(--padding);
+  }
   #header-title {
     display: inline-block;
     transform: scaleX(6);
