--- a/style.css
+++ b/style.css
@@ -331,6 +331,9 @@ img {
   #week3 {
     margin-bottom: 0;
   }
+  .svg-week {
+    min-width: 48%;
+  }
   .work-list {
     pointer-events: none;
   }
