HTML dates and paths images

--- a/style.css
+++ b/style.css
@@ -429,5 +429,6 @@ img {
 .lazyloading {
   opacity: 1;
   transition: opacity 300ms;
-  background: #f7f7f7 url(/img/loader.gif) no-repeat center;
+  background: #f7f7f7 url("https://laak.club/xxl-dreams/img/loader.gif")
+    no-repeat center;
 }
